--- a/celtic_couple_blog/celtic_couple_blog/templates/base.html
+++ b/celtic_couple_blog/celtic_couple_blog/templates/base.html
@@ -76,7 +76,7 @@
     </header>
 
     <!-- Main Content -->
-    <main class="container pt-5 my-5">
+    <main class=" pt-5 my-5">
         {% block content %}
         <!-- Page-specific content will be injected here -->
         {% endblock content %}
